--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Flux"
+      content="Flux, an educational initiative, driven by eight passionate Grade 11 students from Our Lady of Fatima University (SY 2024)"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Flux - Phase Changes, Structure and Properties of Water</title>
